# S.E.C.S.Y

./: .clang-format  .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
include/: Test.hpp
src/: CMakeLists.txt  Test.cpp  main.cpp
src/SECSY/: SECSY.hpp
src/SECSY/Core/: CMakeLists.txt  FlatSet.hpp  SparseSet.hpp  Sparse_Set.hpp  test_flatset.cpp
src/SECSY/ECS/: Component.hpp  ComponentPool.hpp  Entity.hpp  Registry.hpp  System.hpp  View.hpp
src/SECSY/ECS/Render/: Render.hpp  Sprite.hpp  Texture.hpp
src/SECSY/Engine/: Engine.hpp
src/SECSY/Platform/: AssetManager.hpp  Window.hpp
src/SECSY/Render/: Components.hpp  Render.hpp  RenderSystem.hpp  Renderer.hpp  Sprite.hpp  System.hpp  Texture.hpp
tests/: CMakeLists.txt  test_ecs_registry.cpp  test_entity.cpp  test_registry.cpp
